# noodle

./: .gitignore  Cargo.toml  README.md
.github/workflows/: cd.yml  ci.yml
infrastructure/: acm.tf  api.tf  cloudfront.tf  dynamodb.tf  iam.tf  lambdas.tf  locals.tf  main.tf  output.tf  route53.tf  s3.tf  stripe.tf  vars.tf
public/: index.html  script.js  styles.css
src/: lib.rs  payment.rs  payment_client.rs  payments_repository.rs  request_utils.rs  templates.rs
src/bins/: finish_payment.rs  get_payments.rs  initiate_payment.rs
templates/: donation_list.html
